...
  const [newState, setNewState] = useState("");

  const wrongCredentials = () => {
    Alert.alert(
      I18n.t("global.error"),
      I18n.t("passwordSettings.wrongCreds"),
      [{ text: "OK" }],
      { cancelable: true }
    );
  };

  const handleFailedAttempt = () => {
    Alert.alert(
...
