...
                  <ActivityIndicator
                    size="large"
                    color={theme.colors.primary}
                  />
                ) : (
                  <PaperButton
                    testID="formSubmit"
                    disabled={!validForm()}
                    style={{
                      backgroundColor: validForm() ? theme.colors.success : theme.colors.error,
                    }}
                    onPress={() => formikProps.handleSubmit()}
                    icon={validForm() ? "plus" : "alert-octagon"}
...
